Scrollbar fixed

--- a/css/style.css
+++ b/css/style.css
@@ -35,7 +35,6 @@ i {
 /* FINE COMMON */
 /* HEADER */
 .header-top {
-    width: 100%;
     height: 30px;
 }
 
